Fix remove preferred advertisers button
The fix for this removes the ability to post a boost request in more
than one channel (except for dms when it happens automatically).
It was a useless feature to provide to the end user though, so its
removal doesn't matter.
