# api/v2/models/boost_request.go
@@ -25,7 +25,7 @@ type BoostRequest struct {
 
 type BoostRequestPartial struct {
 	RequesterID            string            `json:"requesterId" validate:"required"`
-	BackendChannelID       string            `json:"backendChannelId"`
+	BackendChannelID       string            `json:"backendChannelId" validate:"required"`
 	Message                string            `json:"message" validate:"required"`
 	Price                  int64             `json:"price,string,omitempty"`
 	AdvertiserCut          int64             `json:"advertiserCut,string,omitempty"`
