# boost_request/repository/boost_request.go
@@ -19,6 +19,7 @@ type BoostRequest struct {
 	ExternalID             *uuid.UUID
 	Channel                *BoostRequestChannel
 	GuildID                string
+	BackendChannelID       string
 	RequesterID            string
 	AdvertiserID           string
 	BackendMessages        []*BoostRequestBackendMessage
